--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <img class="upload-icon" src="/script/upload-icon.png" />
             Upload image
         </label>
+        <input type="text" id="nb_roc" placeholder="Number of communication rounds"/>
+        <input type="text" id="nb_users" placeholder="Number of users"/>
         <button type="submit" id="launch_federated">Launch Federated Learning</button>
-        <button type="submit" id="restart server" display="none">Restart Server</button>
+
         <div class="output_container" id="output_container">
             <div id="image-container" class="column" hidden></div>
             <div id="predictions" class="column" hidden></div>
