--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- why not in the static dir? -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -23,7 +24,7 @@
             <div id="predictions" class="column" hidden></div>
         </div>
         <div id="console" class="column" hidden></div>
-       
+
     <script src="/script/script.js" type="module"></script>
     <script src="/script/federated.js" type="module"></script>
   </body>
