adding more methods to aggregate the weights

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </label>
         <input type="text" id="nb_roc" placeholder="Number of communication rounds"/>
         <input type="text" id="nb_users" placeholder="Number of users"/>
+        <input type="text" id="avg_method" placeholder="Averaging method"/>
         <button type="submit" id="launch_federated">Launch Federated Learning</button>
 
         <div class="output_container" id="output_container">
